trunk/Archive2/97/86fccc0273c77b/output
main.cpp:1:29: error: template template parameter requires 'class' after the parameter list
template<template<typename> T x> struct foo{};
                            ^
                            class 
main.cpp:1:31: error: expected ',' or '>' in template-parameter-list
template<template<typename> T x> struct foo{};
                              ^
2 errors generated.
